<resources>
    <string name="app_name">QUICK LEARN</string>
    <string name="attempt_quiz">Attempt Quiz</string>
    <string name="view_news">View News</string>
    <string name="mini_quiz">Mini Quiz</string>
    <string name="maths">Combined Maths</string>
    <string name="biology">Biology</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="add">ADD</string>
    <string name="ernest_rutherford">Ernest Rutherford</string>
    <string name="update">UPDATE</string>
    <string name="que1">The scientist who introduced the model of the atom similar to the solar system?</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="enterusername">Enter your Username</string>
    <string name="enterpassword">Enter your Password</string>
    <string name="log_in">Login</string>
    <string name="physicss">Physics</string>
    <string name="question01">Question 01</string>
    <string name="q1">In a certain thermodynamic process in which and ideal gas is used, the increase of the internal energy of the gas is equal to the heat supplied to the gas.  This process is,</string>
    <string name="a01">a cyclic process</string>
    <string name="a02">a constant volume process</string>
    <string name="a03">a isorthemal process</string>
    <string name="a04">a adiabatic process</string>
    <string name="a05">a constant pressure process</string>
    <string name="Showanswer">Show Answer</string>
    <string name="Next">Next</string>
    <string name="addq">ADD</string>
    <string name="cancelq">CANCEL</string>
    <string name="enter_new_question">Enter New Question?</string>
    <string name="enter_the_answer">Enter The Answer</string>
    <string name="edit_que">In a certain thermodynamic process in which and ideal gas is used, the increase of the internal energy of the gas is equal to the heat supplied to the gas.  This process is,</string>
    <string name="update_q">Update</string>
    <string name="delete_q">Delete</string>
    <string name="back_q">Back</string>
</resources>