<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample18"
    tools:context=".login">

    <TextView
        android:id="@+id/a16"
        android:layout_width="255dp"
        android:layout_height="112dp"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/a15"
        android:layout_width="179dp"
        android:layout_height="53dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="247dp"
        android:text="@string/username"
        android:textColor="#525557"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a16" />

    <TextView
        android:id="@+id/a17"
        android:layout_width="158dp"
        android:layout_height="41dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="216dp"
        android:text="@string/password"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a14" />

    <EditText
        android:id="@+id/a14"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enterusername"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#42A5F5"
        android:textCursorDrawable="@drawable/sample13"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/a17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a15" />

    <EditText
        android:id="@+id/a18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enterpassword"
        android:textColor="#42A5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a17" />

    <Button
        android:id="@+id/a19"
        android:layout_width="145dp"
        android:layout_height="69dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="24dp"
        android:text="@string/log_in"
        android:textSize="24sp"
        app:backgroundTint="#5D6285"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a18" />
</androidx.constraintlayout.widget.ConstraintLayout>