<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample18"
    tools:context=".addquestion">

    <Button
        android:id="@+id/a33"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="158dp"
        android:text="@string/cancelq"
        android:textSize="20sp"
        app:backgroundTint="#1976D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a2" />

    <Button
        android:id="@+id/a2"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="158dp"
        android:text="@string/addq"
        android:textSize="20sp"
        app:backgroundTint="#1976D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="@string/enter_the_answer"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/enter_new_question"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>