<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1"
    tools:context=".didyouknow">

    <View
        android:id="@+id/view"
        android:layout_width="377dp"
        android:layout_height="234dp"
        android:background="@drawable/images"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="378dp"
        android:layout_height="119dp"
        android:layout_marginBottom="300dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/que1"
        android:textAlignment="center"
        android:textColor="#6A1B9A"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="276dp"
        android:layout_height="38dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="195dp"
        android:background="#000C2EEC"
        android:bufferType="normal"
        android:fontFamily="@font/aldrich"
        android:text="@string/ernest_rutherford"
        android:textAlignment="center"
        android:textColor="#1C3EB8"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/button3"
        android:layout_width="138dp"
        android:layout_height="53dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="152dp"
        android:text="@string/add"
        app:backgroundTint="#2196F3"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="152dp"
        android:text="@string/update"
        app:backgroundTint="#2196F3"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>